--- a/Net.css
+++ b/Net.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
     top: 0;
     z-index: 1000;
+    background-color: black;
 }
 
 .head h3 {
@@ -44,7 +45,10 @@ nav{
     text-decoration: none;
     color: white;
 }
-
+a{
+    color: antiquewhite;
+    text-decoration: none;
+}
 .nav nav ul a li:hover {
     color: red;
 }
@@ -61,11 +65,14 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    margin-top: 40px;
     text-align: left;
     padding-left: 30px;
+    margin-bottom: 50px;
 }
-
+.left{
+   
+}
 .left h1 {
     font-size: 50px;
     font-weight: bold;
@@ -83,19 +90,21 @@ nav{
     width: 900px;
     height: auto;
     border-radius: 10px;
+    margin-top: 40px;
+   
 }
 .btn {
     margin-top: 40px;
     display: flex;
     align-items: center;
-    width: 450px;
-    height: 80px;
-    gap: 20px;
+    gap: 15px;
+    padding-right: 20px;
+    margin-top: 100px;
 }
 
 .btn button {
-    width: 200px;
-    height: 60px;
+    width: 90px;
+    height: 30px;
     background-color: white;
     color: black;
     font-size: 18px;
@@ -104,4 +113,19 @@ nav{
     border-radius: 8px;
     cursor: pointer;
     transition: background 0.3s, transform 0.2s;
+}
+#more{
+    background-color: rgb(53, 52, 52);
+    color: white;
+}
+.Carosle{
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+}
+.movie{
+    width: 190px;
+    height: 180px;
+    background-color: rgb(39, 39, 39);
+    border-radius: 5px;
 }
