--- a/Net.css
+++ b/Net.css
@@ -26,6 +26,8 @@ body {
     color: red;
     font-size: 30px;
     font-weight: bold;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 5px red;
 }
 nav{
     padding-right: 7px ;
@@ -104,7 +106,7 @@ a{
 
 .btn button {
     width: 90px;
-    height: 30px;
+    height: 50px;
     background-color: white;
     color: black;
     font-size: 18px;
@@ -122,10 +124,19 @@ a{
       display: flex;
       gap: 10px;
       margin-top: 10px;
+      place-items: center;
 }
 .movie{
     width: 190px;
     height: 180px;
     background-color: rgb(39, 39, 39);
     border-radius: 5px;
+}
+.movie :hover{
+     box-sizing:border-box;
+     box-shadow: 2px 2px 5px red;
+}
+.moviimg{
+    width: fit-content;
+    height: fit-content;
 }
