--- a/Net.css
+++ b/Net.css
@@ -8,6 +8,9 @@
 body {
     background-color:black;
     color: white;
+    overflow-x: auto;
+    overflow-y: auto;
+    align-items: center;
 }
 
 .head {
@@ -72,9 +75,7 @@ a{
     padding-left: 30px;
     margin-bottom: 50px;
 }
-.left{
    
-}
 .left h1 {
     font-size: 50px;
     font-weight: bold;
@@ -140,3 +141,17 @@ a{
     width: fit-content;
     height: fit-content;
 }
+footer {
+    text-align: center;
+    font-size: 14px;
+    color: #aaa;
+    padding: 20px;
+    border-top: 1px solid #333;
+    margin-top: 300px;
+}
+
+  footer a {
+    color: #aaa;
+    margin: 0 8px;
+    text-decoration: none;
+  }
